--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,18 +70,18 @@ section {
   padding: 60px;
 }
 
-/* hero style Start */
-.hero{
-  background-image: url("../images/hero-bg.jpg");
+/* Hero Style Start */
+.hero {
+  background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
   position: relative;
 }
-/* hero style ends */
+/* Hero Style End */
 
 .hero-form {
-  border: solid 3px #024e76;
+  border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
   width: 500px;
@@ -93,9 +93,8 @@ section {
 
 .hero-form h3 {
   font-size: 24px;
-  margin: 0px;
+  margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -110,11 +109,11 @@ section {
   margin-bottom: 15px;
 }
 
-.hero-form label{
-  margin: 0px;
+.hero-form label {
+  margin: 0 5px;
 }
 
-.hero-form button{
+.hero-form button {
   color: #fce138;
   background-color: #024e76;
   border: none;
@@ -122,30 +121,15 @@ section {
   font-size: 16px;
 }
 
-/* HERO STYLES END */
-
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  display: inline-block;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
-}
-
 .intro {
   text-align: center;
 }
 
 .intro p {
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
   margin: 0 auto;
 }
 
@@ -178,6 +162,23 @@ section {
   font-size: 38px;
 }
 
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
 .trainers {
   text-align: center;
 }
@@ -201,14 +202,6 @@ section {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -223,4 +216,12 @@ section {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
